php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #74663 Segfault with opcache.memory_protect and validate_timestamp
Submitted: 2017-05-27 13:44 UTC Modified: -
From: laruence@php.net Assigned:
Status: Closed Package: opcache
PHP Version: 7.0.19 OS:
Private report: No CVE-ID: None
 [2017-05-27 13:44 UTC] laruence@php.net
Description:
------------
sapi/cli/php -d opcache.protect_memory=1 -d opcache.enable_file_override=1 -dopcache.validate_timestamps=1 -d opcache.file_update_protection=0  -d opcache.revalidate_freq=0 test.php

Test script:
---------------
<?php

file_put_contents(__DIR__ . "/bug.php", "");
include __DIR__ . "/bug.php";
//file_put_contents(__DIR__ . "/bug.php", "<?php ");

var_dump(is_file(__DIR__ . "/bug.php"));

Expected result:
----------------
non segfault

Actual result:
--------------
segfault

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2017-05-27 14:42 UTC] ekin at coproductivity dot com
Segfault also on 7.1.3
https://gist.github.com/ekinhbayar/409229701ed30befe94c8d5c86b66806
 [2017-05-27 14:44 UTC] laruence@php.net
Automatic comment on behalf of laruence@gmail.com
Revision: http://git.php.net/?p=php-src.git;a=commit;h=60912e66c8c6089cced22b14eadfade11e89d70a
Log: Fixed bug #74663 (Segfault with opcache.memory_protect and validate_timestamp)
 [2017-05-27 14:44 UTC] laruence@php.net
-Status: Open +Status: Closed
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 26 19:00:01 2026 UTC