Fixed bug #74663 (Segfault with opcache.memory_protect and validate_timestamp)